# scarce-template

./: .gitignore  LICENSE  meson.build
assets/: header
scripts/: configure  install  setup
src/: main.c  map.h
src/core/: input.h  main.c  renderer.c  renderer.h  timing.c  timing.h  utils.c  utils.h
subprojects/: cglm.wrap  glew.wrap  glfw.wrap  inih.wrap  scarce.wrap  stb.wrap
